--- a/projet/src/Widgets/Quote.css
+++ b/projet/src/Widgets/Quote.css
@@ -1,1 +1,17 @@
+.prev,.next
+{
+    font-size: 20px;
+}
 
+.author
+{
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: oblique;
+}
+
+.quote
+{
+    font-size: 40px;
+    
+}
