--- a/projet/src/App.css
+++ b/projet/src/App.css
@@ -1,5 +1,3 @@
-
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -63,6 +61,7 @@
     height:500px;
     width:180px;
   }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -70,4 +69,40 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.flip-card {
+  
+  width: 300px;
+  height: 200px;
+  perspective: 4000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  background-color: rgb(182, 128, 226);
+  position: relative;
+  width: 100%;
+  height: 10rem;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  border-radius: 2em;
+  
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+  
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;  /*Hide and show the back face of two rotated <div> elements*/
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
 }
